_sass/_layout.scss
// CSS Grid

.grid {
  display: grid;
  justify-content: space-between; 
}

.grid-child {
  width: 100%;
}

// Wrapper

.wrapped {
  padding: 0 $phi*5vw;
  @include query(1800px){
    padding: 0 $phi*10vw;
  }
}

// background-image

.logobg {
  background-image: 
    linear-gradient(rgba($background-color, 0.95), rgba($background-color, 0.95)),
    url(/images/schen-large.svg);
  background-repeat: no-repeat;
  background-position: top left, right -10vw bottom -30vh;
  background-attachment: fixed;
}

// Header

header,
.bheader {
  width: 100%;
  margin: 5vh 0 $spacer / 2;
  @include query($bp-tablet){
    @media screen and (orientation: landscape){
      margin: 10vh 0 $spacer / 4;
    }
  }
}

// paddings

.p-top-mobile {
  padding-top: $spacer / 8;
  @include query($bp-tablet){
    padding-top: 1px;
  }
}

.p-top {
  padding-top: $spacer;
}

.p-top-2 {
  padding-top: $spacer*2;
}

.p-bottom {
  padding-bottom: $spacer;
}

.p-bottom-2 {
  padding-bottom: $spacer*2;
}

.m-top {
  margin-top: $spacer;
}

.m-bottom {
  margin-bottom: $spacer;
}

.p-up {
  position: relative;
  top: -1em;
}

.p-down {
  position: relative;
  top: 1em;
}

.logo {
  display: inline-block;
  height: 3.8rem;
}

.sc {
  display: block;
  padding: 0;
  @include query($bp-tablet){
    display: inline-block;
    padding: 0 1rem;
  }
}

// Content

.wrap {
	width: 100%;
	margin-bottom: $spacer;
}

.ninesixty {
	max-width: 960px;
	margin: 0 auto;
  margin-bottom: $spacer;
}

.fullspan {
  width: 100%;
}

.measure {
  max-width: 33em;
  margin: 0 auto;
}

.extraspacer {
  margin: 2em 0;
  @include query($bp-desktop){
    margin: 5em 0;
  }
}

hr {
  border: 0.5rem solid lighten($accent-color, 30%);
}

.tall {
  padding: 10vh 0 5vh;
}

// Feature links

.feature-grid {
  grid-template-columns: repeat(auto-fill, minmax(12rem, 1fr));
  grid-gap: 1rem;
  @include query($bp-desktop){
    grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
  }
}

.feature-link {
  padding: 1rem;
  margin: 0 1rem 0 -1rem;
  overflow-wrap: break-word;
  h3 {
    padding-bottom: 0;
  }
}

a.feature-link {
  background-image: none;
}

.post-link {
  display: block;
  padding: 1rem;
  margin: 0 -1rem -1rem;
  @include query($bp-desktop){
    padding: 1.25rem;
    // border-bottom: 1px dashed lighten($accent-color,40%);
  }
}


// list style

.nls {
  list-style: none;
  padding: 0;
  margin: 0;
}

.inline-block {
  display: inline-block;
}

.post-list {
  @include query($bp-tablet){
    margin-left: 1.75rem;
    border-left: 0.5rem solid lighten($accent-color, 30%);
    padding-left: 2.5rem;
  }
}

// inline icons

.inlineicon {
  position: relative;
  top: -0.05em;
  fill: currentColor;
  width: 0.8em;
  height: 0.8em;
}

// Footer

footer {
	width: 100%;
  a {
    display: inline-block;
    margin: 0 1rem 1rem 0;
    @include query($bp-tablet){
      margin: 0 2rem 0 0;
    }
  }
}

// gallery
.gallery {
  img {
    padding: 2rem;
    max-width: calc(100vw - 2 * 2rem);
    max-height: calc(100vh - 2 * 2rem);
  }
}

// utilities

.right {
  float: right;
}

